added scss files and styles index.html login page

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,6 @@
 // Colour variables
-$gray: rgb(49, 49, 59);
-$orange: rgb(199, 98, 98);
-$purple: rgb(108, 108, 200);
-$black: rgb(36, 36, 36);
+$primary: #FFFFFF;
+$secondary: #0047FF;
+$third: #A93465;
+$fourth: #D2D2D2;
+$typography: #000000;
