made some styles changes on index.html

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,10 +16,10 @@ h1 {
     font-size: 13px!important;
  }
  
- :-moz-placeholder { /* Firefox 18- */
+ :-moz-placeholder { 
        font-size: 13px!important;
  }
- ::-moz-placeholder {  /* Firefox 19+ */
+ ::-moz-placeholder {  
        font-size: 13px!important;
  }
 
@@ -41,6 +41,8 @@ h1 {
 
 input {
     border-radius: 0;
+    font-size: 13px!important;
+    $input-focus-color: $fourth;
 }
 
 label {
@@ -61,7 +63,6 @@ label {
     background-color: $secondary;
     color: white;
     box-shadow: 0 1px 8px $secondary; 
-    border: 0;
 }
 
 .red-btn:hover {
