--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -47,10 +47,13 @@ h1 {
     border-radius: 0;
 }
 
-input {
+input, .textarea {
     border-radius: 0;
     font-size: 13px!important;
-    $input-focus-color: $fourth;
+}
+
+.textarea:focus, input:focus {
+    border-color: $fourth;
 }
 
 label {
