--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -122,6 +122,18 @@ label {
     top: -.5em;
 }
 
+// Listing page
+
+.listings_section {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+
+.view-btn {
+    color: black;
+}
+
 
 
 
