Added functionality to create_listing page
Added listing_created page + js

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -50,6 +50,7 @@ h1 {
 input, .textarea {
     border-radius: 0;
     font-size: 13px!important;
+    border-color: $fourth;
 }
 
 .textarea:focus, input:focus {
