Added profile page with working functions that populates info

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -133,6 +133,13 @@ label {
     color: $secondary;
 }
 
+// Profile Page
+
+.profile-background {
+    height: 150px;
+    background-color: $fourth;
+}
+
 
 
 
