added signout function and filtering function for active listings

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -133,6 +133,11 @@ label {
     color: $secondary;
 }
 
+.loginBtn {
+    color: $secondary;
+    border: none;
+}
+
 // Profile Page
 
 .profile-background {
