fixed responsiveness on listings page

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -151,6 +151,13 @@ label {
     background-color: $fourth;
 }
 
+@media screen and (min-width: 847px) {
+    .bid-btn {
+        margin-bottom: 100px;
+    }
+}
+
+
 
 
 
